<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014. This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License for Helena Local Inc. All rights reseved.
  -->

<resources>
    <string name="app_name">Montana Food Hub</string>
    <string name="event_fragment_title">Events</string>
    <string name="event_fragment_welcome">Check out your regions local food events.</string>
    <string name="member_fragment_title">Members</string>
    <string name="csa_fragment_title">CSAs</string>
    <string name="csa_fragment_welcome">Community Supported Agriculture (CSAs) in your region. See what you are getting this week or buy your shares today!</string>
    <string name="product_fragment_title">Products</string>
    <string name="product_fragment_welcome">Current MT sustainable product availability. Call your local food hub to order today!</string>
    <string name="restaurant_fragment_title">Restaurants</string>
    <string name="restaurant_fragment_welcome">All these regional restaurants buy MT sustainable foods.  Choose one to find out more!</string>
    <string name="producer_fragment_title">Producers</string>
    <string name="producer_fragment_welcome">All these regional producers have been vetted for sustainability. Thank you for supporting them.</string>
    <string name="producer_detail_welcome">Welcome to Acme Farms</string>
    <string name="restaurant_call_action">Call</string>
    <string name="restaurant_map_action">Map</string>
    <string name="restaurant_website_action">Website</string>
    <string name="restaurant_detail_awards">Sustainability and awards</string>
    <string name="restaurant_detail_products">Recently purchased products</string>
    <string name="product_purchase_date">on %s</string>
    <string name="producer_email_action">Email</string>
    <string name="producer_call_action">Call</string>
    <string name="producer_map_action">Map</string>
    <string name="producer_website_action">Website</string>
    <string name="product_producer_detail_action">Producer</string>
    <string name="product_about_action">About</string>
    <string name="product_recipe_action">Recipes</string>
    <plurals name="category_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_closed">Navigation Drawer Closed</string>
    <string-array name="navigation_drawer_items">
        <item>Events</item>
        <item>CSAs</item>
        <item>Restaurants</item>
        <item>Producers</item>
        <item>Products</item>
    </string-array>
    <string name="appInitializing">Loading where your food comes from...</string>
    <string name="no_maps_application">A mapping application is not installed on this device</string>
    <string name="no_email_application">An email application is not installed on this device</string>
    <string name="no_phone_application">This device does not have the ability to make phone calls</string>
    <string name="no_web_browser_application">A web browser is not installed on this device</string>
    <string name="unable_to_start_activity">Unable to start activity</string>
    <string name="info_header_dismiss">Got it</string>
    <string name="feedback_menu_item">Send Feedback</string>
    <string name="feedback_filename_base">Feedback</string>
    <string name="feedback_email_subject">Feedback - Montana Food Hub Android Application</string>
    <string name="feedback_email_address">info@helenalocal.org</string>
    <string name="csa_header_date_text">Shares for the week of %s</string>
    <string name="csa_header_text">CSA members will be receiving the following items in their shares. Enjoy them and contact us if you have questions!</string>
    <string name="website_not_registered">We currently do not have a web site registered for %s</string>
    <string name="secondary_header_text_product">Last updated on %s</string>

</resources>
