<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014. This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License for Helena Local Inc. All rights reseved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="48dp"
              android:baselineAligned="false"
              android:paddingTop="@dimen/large_list_item_padding_top"
              android:paddingLeft="@dimen/large_list_item_padding_left"
              android:paddingRight="@dimen/large_list_item_padding_right"
              android:paddingBottom="@dimen/large_list_item_padding_bottom"
              android:background="@drawable/card_background">


    <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-light"
            android:text="Shares for the week of March 17th"/>

    <TextView
            android:id="@+id/textViewBody"
            android:text="@string/csa_header_text"
            android:autoLink="web"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>

    <View style="@style/horizontalDivider"/>


    <org.montanafoodhub.app.controls.ActionBar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            custom:leftActionText="@string/restaurant_call_action"
            custom:leftActionImage="@drawable/ic_action_call_blue"
            custom:centerActionText="@string/restaurant_map_action"
            custom:centerActionImage="@drawable/ic_action_map_blue"
            custom:rightActionText="@string/restaurant_website_action"
            custom:rightActionImage="@drawable/ic_action_web_site_blue">
    </org.montanafoodhub.app.controls.ActionBar>

</LinearLayout>


