<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright (c) 2014. This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License for Helena Local Inc. All rights reseved.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/detail_activity_background"
            android:fillViewport="true"
            android:paddingLeft="@dimen/card_layout_padding_left"
            android:paddingRight="@dimen/card_layout_padding_right"
            android:paddingTop="@dimen/card_layout_padding_top"
            android:paddingBottom="@dimen/card_layout_padding_bottom"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">


        <RelativeLayout
                android:id="@+id/headerLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/card_background">

            <ImageView
                    android:id="@+id/producerImageView"
                    android:layout_width="@dimen/detail_activity_header_image_width"
                    android:layout_height="@dimen/detail_activity_header_image_height"
                    android:adjustViewBounds="false"
                    android:layout_marginRight="@dimen/detail_activity_header_image_margin_right"/>

            <TextView
                    android:id="@+id/producerNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignTop="@+id/producerImageView"
                    android:layout_toRightOf="@+id/producerImageView"
                    android:singleLine="false"
                    android:layout_marginTop="5dp"
                    android:text="Schnepf Farms"/>

            <TextView
                    android:id="@+id/producerAddressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24810 South Rittenhouse Road Queen Creek, Arizona 85142"
                    android:layout_below="@+id/producerNameTextView"
                    android:layout_alignLeft="@+id/producerNameTextView"
                    android:textSize="@dimen/text_size_extra_small"/>

            <org.montanafoodhub.app.controls.ActionBar
                    android:id="@+id/actionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/producerImageView"
                    android:layout_below="@+id/producerImageView"
                    android:layout_marginTop="5dp"
                    custom:leftActionText="@string/producer_call_action"
                    custom:leftActionImage="@drawable/ic_action_call_blue"
                    custom:centerActionText="@string/producer_map_action"
                    custom:centerActionImage="@drawable/ic_action_map_blue"
                    custom:rightActionText="@string/producer_website_action"
                    custom:rightActionImage="@drawable/ic_action_web_site_blue">
            </org.montanafoodhub.app.controls.ActionBar>


        </RelativeLayout>


        <LinearLayout
                android:id="@+id/contentLayout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/detail_activity_content_margin_top"
                android:padding="@dimen/detail_activity_content_padding"
                android:background="@drawable/card_background"
                android:weightSum="1">

            <TextView
                    android:id="@+id/quoteTextView"
                    style="@style/detailActivityQuote"
                    android:text='"I found the cure for hope"'/>

            <ImageView
                    android:layout_width="240dp"
                    android:layout_height="150dp"
                    android:id="@+id/photoImageView"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:id="@+id/certTextView"
                    style="@style/detailActivitySectionHeader"
                    android:text="@string/restaurant_detail_awards"/>

            <View style="@style/horizontalDivider"/>

            <LinearLayout
                    android:id="@+id/certificationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


        <!--NOTE:   The following two layouts are here for design time only. They are removed at runtime and
                    replaced with layouts created from certifications.xml -->

                <include layout="@layout/certification"/>
                <include layout="@layout/certification"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
