<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014. This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License for Helena Local Inc. All rights reseved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/large_list_item_padding_top"
                android:paddingLeft="@dimen/large_list_item_padding_left"
                android:paddingRight="@dimen/large_list_item_padding_right"
                android:paddingBottom="@dimen/large_list_item_padding_bottom"
                android:background="@drawable/card_background">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            style="@style/default_list_item_imageview"
            android:id="@+id/imageView"
            android:src="@drawable/default_product"
            android:scaleType="centerCrop"/>

        <TextView
                style="@style/list_item_text_primary"
                android:id="@+id/productDesc"
                android:text="Durian"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"/>
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/actionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        <LinearLayout style="@style/ActionContainerLeft"
                android:id="@+id/producerActionLayout"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true">
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/action_image_width"
                    android:layout_height="@dimen/action_image_height"
                    android:src="@drawable/ic_action_producer_blue"/>
            <TextView
                    style="@style/ActionText"
                    android:id="@+id/producerInfo"
                    android:text="@string/product_producer_detail_action"/>
        </LinearLayout>

        <LinearLayout style="@style/ActionContainerCenter"
                android:id="@+id/productActionLayout"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/action_image_width"
                    android:layout_height="@dimen/action_image_height"
                    android:src="@drawable/ic_action_about_blue"/>
            <TextView
                    style="@style/ActionText"
                    android:id="@+id/productInfo"
                    android:text="@string/product_about_action"/>

        </LinearLayout>


        <LinearLayout style="@style/ActionContainerRight"
                android:id="@+id/recipeActionLayout"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/action_image_width"
                    android:layout_height="@dimen/action_image_height"
                    android:src="@drawable/ic_action_recipe_blue"/>

            <TextView
                    style="@style/ActionText"
                    android:id="@+id/recipeInfo"
                    android:text="@string/product_recipe_action"/>
        </LinearLayout>

    </RelativeLayout>

    <!--<View-->
        <!--android:id="@+id/separatorView"-->
        <!--style="@style/horizontalDivider"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_below="@+id/actionLayout"-->
        <!--android:layout_marginTop="5dp"-->
        <!--/>-->

</LinearLayout>

