<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014. This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License for Helena Local Inc. All rights reseved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/detail_activity_background"
            android:fillViewport="true"
            android:paddingLeft="@dimen/card_layout_padding_left"
            android:paddingRight="@dimen/card_layout_padding_right"
            android:paddingTop="@dimen/card_layout_padding_top"
            android:paddingBottom="@dimen/card_layout_padding_bottom"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/detail_activity_background">

        <RelativeLayout
                android:id="@+id/headerLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_activity_header_padding"
                android:background="@drawable/card_background">

            <ImageView
                    android:id="@+id/restaurantImageView"
                    android:layout_width="@dimen/detail_activity_header_image_width"
                    android:layout_height="@dimen/detail_activity_header_image_height"
                    android:adjustViewBounds="false"
                    android:layout_marginRight="@dimen/detail_activity_header_image_margin_right"/>

            <TextView
                    android:id="@+id/restaurantNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Chino Bandito"
                    android:layout_alignTop="@+id/restaurantImageView"
                    android:layout_toRightOf="@+id/restaurantImageView"
                    android:singleLine="false"
                    android:layout_marginTop="5dp"/>

            <TextView
                    android:id="@+id/restaurantAddressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15414 N 19th Ave, Phoenix, AZ 85023"
                    android:layout_below="@+id/restaurantNameTextView"
                    android:layout_alignLeft="@+id/restaurantNameTextView"
                    android:textSize="@dimen/text_size_extra_small"/>


            <RelativeLayout
                    android:id="@+id/actionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/restaurantImageView"
                    android:layout_below="@+id/restaurantImageView"
                    android:layout_marginTop="5dp">

                <LinearLayout style="@style/ActionContainerLeft"
                        android:id="@+id/contactActionLayout"
                        android:orientation="horizontal"
                        android:layout_alignParentLeft="true">
                    <ImageView
                            android:id="@+id/contactImageView"
                            android:layout_width="@dimen/action_image_width"
                            android:layout_height="@dimen/action_image_height"
                            android:src="@drawable/ic_action_call_blue"/>

                    <TextView style="@style/ActionText"
                            android:id="@+id/contactTextView"
                            android:text="@string/restaurant_call_action"/>
                </LinearLayout>


                <LinearLayout style="@style/ActionContainerCenter"
                        android:id="@+id/mapActionLayout"
                        android:orientation="horizontal"
                        android:layout_centerInParent="true">
                    <ImageView
                            android:id="@+id/mapImageView"
                            android:layout_width="@dimen/action_image_width"
                            android:layout_height="@dimen/action_image_height"
                            android:src="@drawable/ic_action_map_blue"/>

                    <TextView style="@style/ActionText"
                            android:id="@+id/mapTextView"
                            android:text="@string/restaurant_map_action"/>
                </LinearLayout>


                <LinearLayout style="@style/ActionContainerRight"
                        android:id="@+id/urlActionLayout"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                    <ImageView
                            android:id="@+id/urlImageView"
                            android:layout_width="@dimen/action_image_width"
                            android:layout_height="@dimen/action_image_height"
                            android:src="@drawable/ic_action_web_site_blue"/>

                    <TextView style="@style/ActionText"
                            android:id="@+id/urlTextView"
                            android:text="@string/restaurant_website_action"/>
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>


        <LinearLayout
                android:id="@+id/contentLayout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/detail_activity_content_margin_top"
                android:padding="@dimen/detail_activity_content_padding"
                android:background="@drawable/card_background">

            <TextView
                    android:id="@+id/productTextView"
                    style="@style/detailActivitySectionHeader"
                    android:text="@string/restaurant_detail_products"/>

            <View style="@style/horizontalDivider"/>

            <TableLayout
                    android:id="@+id/productsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:shrinkColumns="1"
                    android:layout_marginBottom="25dp">


        <!--NOTE:   The following two layouts are here for design time only. They are removed at runtime and
                            replaced with layouts created from restaurant_product.xml -->

                <include layout="@layout/restaurant_product"/>
                <include layout="@layout/restaurant_product"/>

            </TableLayout>

            <TextView
                    android:id="@+id/certTextView"
                    style="@style/detailActivitySectionHeader"
                    android:text="@string/restaurant_detail_awards"/>

            <View style="@style/horizontalDivider"/>

            <LinearLayout
                    android:id="@+id/certificationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


        <!--NOTE:   The following two layouts are here for design time only. They are removed at runtime and
                    replaced with layouts created from certifications.xml -->

                <include layout="@layout/certification"/>
                <include layout="@layout/certification"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>